--- a/tools/mocha-chai/package.json
+++ b/tools/mocha-chai/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "request": "^2.36.0",
     "http": "0.0.0",
-    "chai": "^1.9.1"
+    "chai": "^1.9.1",
+    "mocha": "^1.20.1",
+    "jquery": "^2.1.1",
+    "requirejs": "^2.1.14"
   }
 }
