--- a/apigee-deploy-grunt-plugin/package.json
+++ b/apigee-deploy-grunt-plugin/package.json
@@ -25,5 +25,10 @@
     "grunt-contrib-compress": "^0.10.0",
     "grunt-contrib-clean": "^0.5.0",
     "request": "^2.37.0"
+  },
+  "devDependencies": {
+    "grunt-contrib-concat": "^0.5.0",
+    "load-grunt-tasks": "^0.6.0",
+    "load-grunt-config": "^0.12.0"
   }
 }
