--- a/apigee-deploy-grunt-plugin/package.json
+++ b/apigee-deploy-grunt-plugin/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "grunt-contrib-concat": "^0.5.0",
     "load-grunt-tasks": "^0.6.0",
-    "load-grunt-config": "^0.12.0"
+    "load-grunt-config": "^0.12.0",
+    "async": "^0.9.0"
   }
 }
