--- a/apigee-deploy-grunt-plugin/package.json
+++ b/apigee-deploy-grunt-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apigee-deploy-grunt-plugin",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Utility to manage API Proxy lifecycle in Apigee",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "."
+    "url": "https://github.com/apigeecs/apigee-deploy-grunt-plugin"
   },
   "keywords": [
     "apigee",
@@ -30,6 +30,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "load-grunt-tasks": "^0.6.0",
     "load-grunt-config": "^0.12.0",
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "grunt-xmlpoke": "^0.5.0"
   }
 }
