--- a/package.json
+++ b/package.json
@@ -1,40 +1,36 @@
 {
-  "author": "Kristopher Kleva <kkleva@llbean.com>",
   "name": "apigee-deploy-grunt-plugin",
-  "description": "A Tasks to manage apigee proxies and other useful API artefacts.",
-  "version": "0.0.0",
-  "homepage": "https://github.com/apigeecs/apigee-deploy-grunt-plugin",
+  "version": "0.0.1",
+  "description": "Utility to manage API Proxy lifecycle in Apigee",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apigeecs/apigee-deploy-grunt-plugin.git"
+    "url": "https://github.com/apigeecs/apigee-deploy-grunt-plugin"
   },
-  "engines": {
-    "node": "~0.6.8"
-  },
+  "keywords": [
+    "apigee",
+    "deploy",
+    "lifecycle",
+    "API"
+  ],
+  "author": "Diego Zuluaga",
+  "license": "ISC",
   "dependencies": {
-    "express" : "2.5.x",
-    "underscore" : "1.3.x",
-    "amdefine" : "0.0.2",
-    "expect.js" : "0.1.2",
-    "grunt" : "~0.4.0",
-    "grunt-contrib-jshint" : "~0.1.0",
-    
-    "jquery": "2.1.1"
-  
+    "grunt": "^0.4.5",
+    "grunt-mkdir": "^0.1.2",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-compress": "^0.10.0",
+    "grunt-contrib-clean": "^0.5.0",
+    "request": "^2.37.0"
   },
   "devDependencies": {
-    "mocha" : "1.2.x",
-    "mocha-phantomjs" : "3.5.0",
-    "requirejs" : "1.0.x",
-    "grunt-contrib-livereload" : "~0.1.2",
-    "grunt-contrib-watch" : "~0.4.4"
-  },
-  "scripts": {
-    "start": "node bin/serve",
-    "test": "./node_modules/mocha/bin/mocha -R spec tests/runner.js"
-  },
-  "bin" : "bin/serve",
-  "bugs" : {
-    "url" : "https://github.com/apigeecs/apigee-deploy-grunt-plugin/issues"
+    "grunt-contrib-concat": "^0.5.0",
+    "load-grunt-tasks": "^0.6.0",
+    "load-grunt-config": "^0.12.0",
+    "async": "^0.9.0",
+    "grunt-xmlpoke": "^0.5.0"
   }
 }
