--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "request": "^2.37.0"
   },
   "devDependencies": {
-    "grunt-contrib-concat": "^0.5.0",
-    "load-grunt-tasks": "^0.6.0",
-    "load-grunt-config": "^0.12.0",
     "async": "^0.9.0",
-    "grunt-xmlpoke": "^0.5.0"
+    "blanket": "^1.1.6",
+    "chai": "^1.9.1",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-mocha-test": "^0.11.0",
+    "grunt-xmlpoke": "^0.5.0",
+    "load-grunt-config": "^0.12.0",
+    "load-grunt-tasks": "^0.6.0"
   }
 }
