--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "chai": "^1.9.1",
     "curl-cmd": "0.0.0",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-eslint": "^1.0.0",
     "grunt-mocha-test": "^0.11.0",
     "grunt-xmlpoke": "^0.5.0",
+    "jshint-stylish": "^0.4.0",
     "load-grunt-config": "^0.12.0",
     "load-grunt-tasks": "^0.6.0"
   }
