--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "async": "^0.9.0",
     "blanket": "^1.1.6",
     "chai": "^1.9.1",
+    "chai-http": "^0.5.0",
     "curl-cmd": "0.0.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
