use apigee-sdk-mgmt-api

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "request": "^2.37.0"
   },
   "devDependencies": {
+    "apigee-sdk-mgmt-api": "^1.0.0",
     "async": "^0.9.0",
     "blanket": "^1.1.6",
     "chai": "^1.9.1",
