--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-eslint": "^1.0.0",
     "grunt-mocha-test": "^0.11.0",
+    "grunt-string-replace": "^1.0.0",
     "grunt-xmlpoke": "^0.5.0",
     "jshint-stylish": "^0.4.0",
     "load-grunt-config": "^0.12.0",
