--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-eslint": "^1.0.0",
     "grunt-mocha-test": "^0.11.0",
+    "grunt-run-java": "^0.1.1",
     "grunt-shell": "^1.1.1",
     "grunt-string-replace": "^1.0.0",
     "grunt-xmlpoke": "^0.5.0",
