--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
   "license": "ISC",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-mkdir": "^0.1.2",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-compress": "^0.10.0",
+    "grunt-available-tasks": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
-    "request": "^2.37.0"
-  },
-  "devDependencies": {
+    "grunt-contrib-compress": "^0.10.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-mkdir": "^0.1.2",
+    "request": "^2.37.0",
     "apigee-sdk-mgmt-api": "^1.0.0",
     "async": "^0.9.0",
     "blanket": "^1.1.6",
@@ -43,5 +42,7 @@
     "jshint-stylish": "^0.4.0",
     "load-grunt-config": "^0.12.0",
     "load-grunt-tasks": "^0.6.0"
+  },
+  "devDependencies": {
   }
 }
