--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "grunt-xmlpoke": "^0.5.0",
     "jshint-stylish": "^0.4.0",
     "load-grunt-config": "^0.12.0",
-    "load-grunt-tasks": "^0.6.0"
+    "load-grunt-tasks": "^0.6.0",
+    "grunt-complexity": "^0.2.0",
+    "grunt-notify": "^0.3.1",
+    "grunt-update-submodules": "^0.4.1",
+    "time-grunt": "^1.0.0"
   },
   "devDependencies": {
   }
