--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chai": "^1.9.1",
     "chai-http": "^0.5.0",
     "curl-cmd": "0.0.0",
-    "git-rev": "^0.2.1",
+    "gift": "^0.4.3-1",
     "grunt": "^0.4.5",
     "grunt-available-tasks": "^0.5.0",
     "grunt-complexity": "^0.2.0",
