--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utility to manage API Proxy lifecycle in Apigee",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt mochaTest -env=test"
   },
   "repository": {
     "type": "git",
@@ -48,5 +48,5 @@
     "request": "^2.37.0",
     "time-grunt": "^1.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
 }
