--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "apigee-deploy-grunt-plugin",
-  "version": "0.0.3",
-  "description": "Utility to manage API Proxy lifecycle in Apigee",
+  "name": "<%= apiname %>",
+  "version": "0.0.1",
+  "description": "Out of the box I include scaffolding apiproxy, Node.js, and Gruntfile to build your app.",
   "main": "index.js",
   "scripts": {
     "test": "grunt mochaTest -env=test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apigeecs/apigee-deploy-grunt-plugin"
+    "url": "https://github.com/{org}/<%= apiname %>"
   },
   "keywords": [
     "apigee",
@@ -16,7 +16,7 @@
     "lifecycle",
     "API"
   ],
-  "author": "Diego Zuluaga",
+  "author": "{YOUR_NAME_HERE}",
   "license": "ISC",
   "dependencies": {
     "apigee-sdk-mgmt-api": "^1.1.0",
@@ -41,13 +41,16 @@
     "grunt-shell": "^1.1.1",
     "grunt-string-replace": "^1.0.0",
     "grunt-update-submodules": "^0.4.1",
-    "grunt-xmlpoke": "^0.6.0",
     "grunt-apigee-kvm": "*",
+    "grunt-xmlpoke": "^0.6.0",
     "jshint-stylish": "^0.4.0",
     "load-grunt-config": "^0.12.0",
     "load-grunt-tasks": "^0.6.0",
     "request": "^2.37.0",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "cfonts": "0.0.13",
+    "grunt-prompt": "^1.3.0",
+    "grunt-apigee-import-api-bundle": "^0.0.1"
   },
   "devDependencies": {}
 }
